--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,7 @@ status = 3
 user = ncoop57
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
-# console_scripts =
+requirements = fastcore langchain openai rich "textual[dev]"
+dev_requirements = black[jupyter] ipykernel ipywidgets nbdev<3 twine
+console_scripts = term_assist=terminal_assist.cli:term_assist
+black_formatting = True
